New Lock Checker type `@NewObject`, for the result of a constructor invocation